# c-commons

./: CMakeLists.txt  README.md
main/cpp/include/ccommons/io/: ClientSocket.hpp  ServerSocket.hpp  Shm.hpp  ShmFifo.hpp
main/cpp/include/ccommons/utils/: CustomTypes.h  log_utils.h
main/cpp/src/ccommons/io/: ClientSocket.cpp  ServerSocket.cpp  Shm.cpp  ShmFifo.cpp
main/cpp/src/ccommons/utils/: log_utils.cpp
test/: CMakeLists.txt
test/cpp/shm/: shm_test.cpp
test/cpp/shmfifo/: shmfifo_test.cpp
